--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "deepagents"
-version = "0.0.3"
-description = "General purpose 'deep agent' with sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
+version = "0.1.0"
+description = "Enhanced deep agents with per-subagent model assignment, built-in context optimization, sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
@@ -11,8 +11,9 @@ dependencies = [
     "langchain>=0.2.14",
     "langchain-groq>=0.3.6",
     "python-dotenv>=1.1.1",
-    "langgraph-cli[inmem]>=0.3.6",
     "tavily-python>=0.7.10",
+    "langgraph-cli>=0.3.6",
+    "groq>=0.30.0",
 ]
 
 
